Fix alignment of long blockquotes

--- a/www/_sass/_base.scss
+++ b/www/_sass/_base.scss
@@ -127,6 +127,10 @@ blockquote {
     text-align: center;
     font-style: italic;
 
+    > * {
+        text-align: left;
+    }
+
     > :last-child {
         margin-bottom: 0;
     }
